front_btool/src/Functionality.css
@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');

.topBox{
  justify-content: center;
  display: grid;
  height: 520px;
  grid-template-columns: 600px 500px;
  grid-gap: 30px;
}

.EntryStyle {
  background-color: rgb(231, 233, 236);
  width: 500px;
  height: 300px;
  border-radius: 10px;
  border: 2px solid #a1a1a1;
  font-family: 'Rubik', sans-serif;
}
.EntryStyle label {
  padding-top: 10px;
  padding-bottom: 5px;
}
.EntryStyle button {
  margin-top: 10px;
  padding-top: 5px;
  padding-bottom: 5px;
}

form {
  padding-left: 25%;
  padding-top: 10%;
}

label {
  display: inline-block;
  width: 120px;
}

input {
  padding: 5px 10px;
}

/* ******************* Top container 2 ->>>>>*/
.topBox2 {
  background-color: rgb(231, 233, 236);
  width: 470px;
  height: auto;
  border-radius: 10px;
  border: 2px solid #a1a1a1;
  table-layout: fixed;
  font-family: 'Rubik', sans-serif;
  display: flex;
  justify-content: center;
}

.topBox2 input {
  width: 50px;
  height: 6px;
}

.topBox2 tr:nth-child(even) {background-color: #f2f2f2;;}
.topBox2 tr:hover {background-color: #ddd;}

.topBox2 th {
  padding-top: 12px;
  padding-bottom: 12px;
  text-align: center;
  background-color: #04AA6D;
  color: white;
  border-radius: 3px;
}

.topBox2 h1 {
  text-align: center;
  padding-top: 100px;
  
}

/****************entires table css*/
.itemsTable{
  flex: 1;
}
.itemsTable table {
  padding-top: 50px;
  padding-left: 20px;
  width: 100.4%;
}
.topBox2 table {
  text-align: center;
}

.itemsTable td {
  padding-top: 9px;
  padding-bottom: 9px;
}
/*Table 1 column widths*/
.itemsTable th:first-child,
.itemsTable td:first-child {
  width: 40%;
}
.itemsTable th:nth-child(2),
.itemsTable td:nth-child(2) {
  width: 20%;
}
.itemsTable th:nth-child(3),
.itemsTable td:nth-child(3) {
  width: 20%;
}

/********************sold price table styling*/
.soldItemsTable{
  padding-top: 50px;
  margin-right: 20px;
}

.soldItemsTable td {
  height: 35px;
}

.soldItemsTable td label{
  padding-top: 8px;
  padding-bottom: 8px;
}

.soldItemsTable td input{
  padding-top: 12.8px;
  padding-bottom: 12.8px;
}
.topBox2 th {
  width: 150px;
}

.NetBalanceDiv{
  position: sticky;
  background-color: rgb(231, 233, 236);
  width: 500px;
  height: 200px;
  border-radius: 10px;
  border: 2px solid #a1a1a1;
  font-family: 'Rubik', sans-serif;
}

.NetBalanceDiv label{
  font-size: 99px;
  padding-left: 7%;
}

.netBalancePositive{
  color: green;
}

.netBalanceNegative{
  color: red;
}
.veticalBox{
  width: 600px;
  height: 100px;
  display: grid;
  grid-template-columns: 1fr;
  gap: 10px;
  grid-template-rows: 1fr 1fr 1fr;
  align-items: center; /* Vertically center child elements */
  justify-content: center;
}

.updateDiv{
 width: 500px;
 height: 200px;
 border-radius: 10px;
 background-color: rgb(231, 233, 236);
 border: 2px solid #a1a1a1;
 font-family: 'Rubik', sans-serif;
}

